--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,6 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  color: aliceblue;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,6 +25,7 @@ a:hover {
 
 body {
   margin: 0;
+  display: flex;
   min-width: 320px;
   min-height: 100vh;
 }
