--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -2,3 +2,21 @@
     display: flex;
     gap: 15px;
 }
+
+.form-a {
+    --input-focus: #2d8cf0;
+    --font-color: #323232;
+    --font-color-sub: #666;
+    --bg-color: #fff;
+    --main-color: #323232;
+    padding: 20px;
+    background: lightgrey;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+    border-radius: 15px;
+    border: 2px solid var(--main-color);
+    box-shadow: 4px 4px var(--main-color);
+}
